removed info icon, added favourite icon, fix layout shift caused by scrollbars

--- a/src/app/modules/todo/ui/todo-list-item-ui/todo-list-item-ui.component.scss
+++ b/src/app/modules/todo/ui/todo-list-item-ui/todo-list-item-ui.component.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 40px;
-  padding: 0px 23px 0 10px;
+  padding: 0px 25px 0 10px;
   background-color: -var(--todo-bg-yellow);
 }
 
